# jak

./: .gitignore  CMakeLists.txt  README.md  jak.cpp  xorshift64.h
src/: CMakeLists.txt  aliastable.h  jak.cpp  jak.cpp.orig  jak_data.cpp  jakargs.xmh  rexp.cpp  rexp.h  xorshift64.h
